<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">饮水思源</string>
    <string name="frequent_used">常用</string>
    <string name="sections">全部讨论区</string>
    <string name="action_pic">看图</string>
    <string name="share_pic">分享图片</string>
    <string name="pic_saved">图片保存成功</string>
    <string name="pic_not_saved">图片保存失败</string>
    <string name="storage_failed">未找到外部存储</string>
    <string name="action_uploaded">上载区</string>
    <string name="search">搜索</string>
    <string name="clear">清空</string>
    <string name="search_hint">请输入板块名称</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_uploaded_pics">上载区</string>

    <!--settings-->
    <string name="account">账号</string>
    <string name="key_account">account</string>
    <string name="not_logged_in">未登录</string>
    <string name="key_login">login</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="key_auto_login">auto_login</string>
    <string name="auto_login">自动登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="key_username">username</string>
    <string name="key_password">password</string>
    <string name="key_remember">remember</string>
    <string name="remember">记住账号密码</string>
    <string name="cancel">取消</string>
    <string name="username_null">用户名不能为空</string>
    <string name="password_null">密码不能为空</string>
    <string name="content">内容</string>
    <string name="key_mark_read">key_mark_read</string>
    <string name="mark_read">标记已读帖子</string>
    <string name="about">关于</string>
    <string name="creator">开发者</string>
    <string name="key_creator">key_creator</string>
    <string name="creator_name">\@Jewelzqiu</string>
    <string name="creator_email">jewelz.q.915\@gmail.com</string>
    <string name="select_mail_app">向开发者发送邮件</string>
    <string name="key_github">key_github</string>
    <string name="key_pic_path">pic_path</string>
    <string name="pic_path">图片保存路径</string>
    <string name="github">Github</string>

    <!--new post-->
    <string name="post_new_article">发表文章</string>
    <string name="send">发送</string>
    <string name="title">标题</string>
    <string name="upload">上传图片</string>
    <string name="input_title">请输入标题</string>
    <string name="input_content">请输入内容</string>
    <string name="post_success">发布成功</string>
    <string name="post_failed">发布失败，请重试</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failed">上传失败，请重试</string>
    <string name="require_relogin">请重新登录</string>
    <string name="reply">回复</string>

    <!--exception-->
    <string name="send_log">发送错误报告</string>

</resources>
