<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/content">

        <SwitchPreference
            android:key="@string/key_mark_read"
            android:title="@string/mark_read"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="@string/key_creator"
            android:title="@string/creator"
            android:summary="@string/creator_email" />

        <Preference
            android:key="@string/key_github"
            android:title="@string/github"
            android:summary="https://github.com/Jewelzqiu/sjtubbs" />

        <Preference
            android:key="@string/key_pic_path"
            android:title="@string/pic_path" />

    </PreferenceCategory>

</PreferenceScreen>