<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/title"
        android:textColor="@color/sjtublue"/>

    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/input_title"
        android:layout_below="@id/textview_title"/>

    <TextView
        android:id="@+id/textview_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_title"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/content"
        android:textColor="@color/sjtublue"/>

    <EditText
        android:id="@+id/edittext_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textview_content"
        android:layout_alignParentBottom="true"
        android:gravity="start"
        android:hint="@string/input_content"/>

</RelativeLayout>